--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "miproyectoreact",
   "version": "1.0.0",
-
   "scripts": {
     "start": "parcel public/index.html",
     "build": "parcel build public/index.html"
@@ -11,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bootstrap": "^5.3.5",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "parcel": "^2.14.4"
