--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
+    "buffer": "^6.0.3",
     "parcel": "^2.14.4"
   }
 }
