--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "react": "^19.1.0",
